--- a/admin/i18n/ru/translations.json
+++ b/admin/i18n/ru/translations.json
@@ -6,5 +6,7 @@
     "systemPassword-detail": "Может быть удален после сопряжения",
     "pairingDelay": "Задержка при попытках сопряжения в мс",
     "pairingDelay-detail": "Время ожидания во время попыток сопряжения",
-    "rateLimit": "Задержка между вызовами контроллера в мс"
+    "rateLimit": "Задержка между вызовами контроллера в мс",
+    "skipServerCertificateCheck": "Пропустить проверку сертификата сервера",
+    "skipServerCertificateCheck-detail": "Снижает безопасность соединения. Используйте на свой страх и риск."
 }
