--- a/admin/i18n/nl/translations.json
+++ b/admin/i18n/nl/translations.json
@@ -6,5 +6,7 @@
     "systemPassword-detail": "Kan na het koppelen worden verwijderd",
     "pairingDelay": "Vertraging tijdens koppelingspogingen in ms",
     "pairingDelay-detail": "Tijd die wacht tijdens de koppelingspogingen",
-    "rateLimit": "Vertraging tussen controlleroproepen in ms"
+    "rateLimit": "Vertraging tussen controlleroproepen in ms",
+    "skipServerCertificateCheck": "Controle servercertificaat overslaan",
+    "skipServerCertificateCheck-detail": "Vermindert de veiligheid van de verbinding. Gebruik op eigen risico."
 }
